# csd-rs

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IFLOW.md  README.md  default.profdata  default.profraw  issues.md  lcov.info  lcsre.rs  lcsre_ai.rs  notes.md  notes2.md  perf.data  perf.data.old
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  grcov.bak
.trunk/: actions  logs  notifications  out  trunk.yaml
.trunk/plugins/: trunk
benches/: csd_benchmark.rs  my_benchmark.rs  perf.rs
src/: csd.rs  csd_multiplier.rs  lcsre  lcsre.rs  lib  lib.rs  main.rs  main.trs  main2.trs
tests/: cli_tests.rs  test_csd.rs
