[package]
name = "csd-rs"      # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Wai-Shing Luk <luk036@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "csd"
path = "src/lib.rs"

[dependencies]
# rand = "0.5.5"
structopt = "0.3.26"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
