[package]
name = "csd-rs"
version = "0.1.2"
authors = ["Wai-Shing Luk <luk036@gmail.com>"]
edition = "2021"
description = "Canonical Signed Digit Conversion in Rust"
readme = "README.md"
homepage = "https://luk036.github.io/csd-rs/"
repository = "https://github.com/luk036/csd-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "csd"
path = "src/lib.rs"

[dependencies]
argparse = "0.2.2"
log = "0.4.25"
# rand = "0.5.5"
# structopt = "0.3.26"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false
