[package]
name = "csd-rs"
version = "0.1.3"
authors = ["Wai-Shing Luk <luk036@gmail.com>"]
edition = "2021"
description = "Canonical Signed Digit Conversion in Rust"
readme = "README.md"
homepage = "https://luk036.github.io/csd-rs/"
repository = "https://github.com/luk036/csd-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "csd"
path = "src/lib.rs"

[[bin]]
name = "csd-rs"
path = "src/main.rs"

[dependencies]
svgbobdoc = { version = "0.3", default-features = false }
# rand = "0.5.5"
# structopt = "0.3.26"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1.1.0"
criterion = "0.7.0"
serial_test = "3.0.0"
# pprof = { version = "0.15.0", features = ["flamegraph"] }

[features]
default = ["multiplier", "lcsre"]
multiplier = []
lcsre = []
docsrs = ["svgbobdoc/enable"]


[[bench]]
name = "csd_benchmark"
harness = false

[profile.bench]
debug = true
